# vk_mini_samples

./: .gitignore  1-Deploy.bat  2-Build.bat  3-Install.bat  4-Clean shaders.bat  5-Clean.bat  CMakeLists.txt  README.md  slangdconfig.json  test.py
aftermath/: CMakeLists.txt  README.md
aftermath/shaders/: frag_shader.frag  pathtrace.rchit  pathtrace.rgen  pathtrace.rmiss  raster.frag  raycommon.glsl
aftermath/src/: aftermath_sample.cpp  aftermath_sample.hpp  main.cpp  nsight_aftermath_gpu_crash_tracker.cpp  vulkan_sample.cpp  vulkan_sample.hpp
common/: CMakeLists.txt  alloc_dma.hpp  bird_curve_helper.cpp  bird_curve_helper.hpp  bit_packer.hpp  nesting_scoped_timer.cpp  nesting_scoped_timer.hpp  nvapi_manager.hpp  slang_compiler.hpp  utils.hpp  vk_context.hpp
common/common_shaders/: palette.h
common/shaders/: constants.hlsli  dh_inspector.hlsli  dh_lighting.hlsli  dh_scn_desc.hlsli  direct_lighting.glsl  functions.hlsli  get_hit.glsl  ggx.hlsli  glsl_type.hlsli  glsl_type.slang  hdr_dome.comp  hdr_prefilter_glossy.comp  light_contrib.hlsli  pathtrace.rahit  pathtrace.rchit  pathtrace.rgen  pathtrace.rmiss  pbr_gltf.glsl  pbr_mat_eval.hlsli  pbr_mat_struct.hlsli  random.hlsli  raster.frag  raster.vert  raster_overlay.frag  sampling.glsl  shading.glsl  sky.hlsli  vertex_accessor.hlsli  vertex_accessor.slang
common/src/: hdr_env_dome.cpp  hdr_env_dome.hpp  vulkan_sample.cpp  vulkan_sample.hpp
debug_printf/: CMakeLists.txt  README.md
debug_printf/shaders/: host_device.h  pathtrace.rchit  pathtrace.rgen  pbr_gltf.glsl  sampling.glsl
debug_printf/src/: debug_printf.cpp  debug_printf.hpp  main.cpp  vulkan_sample.cpp  vulkan_sample.hpp
optix_denoiser/: CMakeLists.txt  README.md
optix_denoiser/shaders/: cpy_to_buffer.comp  cpy_to_img.comp  gbuffers.rchit  gbuffers.rmiss  hdr_env_sampling.glsl  host_device.h  pathtrace.rahit  pathtrace.rchit  pathtrace.rgen  pathtrace.rmiss  pbr_gltf.glsl  post.frag  ray_common.glsl  raycommon.glsl
optix_denoiser/src/: denoiser.cpp  denoiser.hpp  hdr_env.hpp  main.cpp  optix_denoiser_sample.cpp  optix_denoiser_sample.hpp  vulkan_sample.cpp  vulkan_sample.hpp
samples/: CMakeLists.txt  shadertoolsconfig.json
samples/aftermath/: CMakeLists.txt  README.md  extra.cmake
samples/aftermath/aftermath_sdk/: _readme.txt
samples/aftermath/cmake/: FindNsightAftermath.cmake
samples/aftermath/shaders/: device_host.h  raster.frag  raster.hlsl  raster.vert
samples/aftermath/src/: NsightAftermathGpuCrashTracker.cpp  NsightAftermathGpuCrashTracker.h  NsightAftermathHelpers.h  aftermath.cpp
samples/barycentric_wireframe/: CMakeLists.txt  README.md  barycentric_wireframe.cpp  extra.cmake
samples/barycentric_wireframe/shaders/: bary.frag.glsl  bary.slang  bary.vert.glsl  device_host.h  raster.frag  raster.frag.glsl  raster.hlsl  raster.slang  raster.vert  shaderio.h
samples/barycentric_wireframe/src/: barycentric_wireframe.cpp
samples/compute_multi_threaded/: CMakeLists.txt  README.md  multi_threaded.cpp
samples/compute_multi_threaded/shaders/: device_host.h  shader.comp.glsl  shader.hlsl  shader.slang  shaderio.h
samples/compute_only/: CMakeLists.txt  README.md  compute_only.cpp  extra.cmake
samples/compute_only/shaders/: compute_only.comp.glsl  compute_only.slang  device_host.h  shader.comp.glsl  shader.hlsl  shader.slang  shaderio.h
samples/compute_only/src/: compute_only.cpp
samples/crash_aftermath/: CMakeLists.txt  README.md  crash_aftermath.cpp
samples/crash_aftermath/shaders/: crash_aftermath.comp.glsl  crash_aftermath.frag.glsl  crash_aftermath.slang  crash_aftermath.vert.glsl  device_host.h  raster.hlsl  raster.slang  raster.vert  shaderio.h
samples/crash_aftermath/src/: crash_aftermath.cpp
samples/gltf_raytrace/: CMakeLists.txt  README.md  gltf_raytrace.cpp  tiny_stb_implementation.cpp
samples/gltf_raytrace/shaders/: device_host.h  dh_bindings.h  gltf_pathtrace.comp.glsl  gltf_pathtrace.hlsl  (+3 more)
samples/gpu_monitor/: CMakeLists.txt  README.md  gpu_monitor.cpp
samples/image_ktx/: CMakeLists.txt  README.md  extra.cmake  image_ktx.cpp
samples/image_viewer/: CMakeLists.txt  README.md  extra.cmake  image_viewer.cpp
samples/line_stipple/: CMakeLists.txt  README.md  line_stipple.cpp
samples/memory_budget/: CMakeLists.txt  README.md  memory_budget.cpp
samples/mesh_shaders/: CMakeLists.txt  README.md  mesh_shaders.cpp
samples/mesh_task_shaders/: CMakeLists.txt  README.md  mesh_task_shaders.cpp
samples/mm_displacement/: CMakeLists.txt  README.md  dmm_process.cpp  dmm_process.hpp  extra.cmake  mm_displacement.cpp
samples/mm_opacity/: CMakeLists.txt  README.md  bird_curve_helper.cpp  bird_curve_helper.hpp  extra.cmake  mm_opacity.cpp  mm_process.cpp  mm_process.hpp
samples/msaa/: CMakeLists.txt  README.md  extra.cmake  msaa.cpp
samples/offscreen/: CMakeLists.txt  README.md  extra.cmake  offscreen.cpp
samples/ray_query/: CMakeLists.txt  README.md  extra.cmake  ray_query.cpp
samples/ray_query_position_fetch/: CMakeLists.txt  README.md  extra.cmake  ray_query_position_fetch.cpp
samples/ray_trace/: CMakeLists.txt  README.md  extra.cmake  ray_trace.cpp
samples/ray_trace_motion_blur/: CMakeLists.txt  README.md  ray_trace_motion_blur.cpp
samples/ray_tracing_position_fetch/: CMakeLists.txt  README.md  extra.cmake  ray_tracing_position_fetch.cpp
samples/raytrace/: CMakeLists.txt
samples/realtime_analysis/: CMakeLists.txt  README.md  realtime_analysis.cpp  realtime_analysis.h
samples/rectangle/: CMakeLists.txt  README.md  extra.cmake  rectangle.cpp
samples/ser_pathtrace/: CMakeLists.txt  README.md  extra.cmake  ser_pathtrace.cpp
samples/shader_object/: CMakeLists.txt  README.md  extra.cmake  shader_object.cpp
samples/shader_printf/: CMakeLists.txt  README.md  extra.cmake  shader_printf.cpp
samples/simple_polygons/: CMakeLists.txt  README.md  simple_polygons.cpp
samples/solid_color/: CMakeLists.txt  README.md  solid_color.cpp
samples/texture_3d/: CMakeLists.txt  README.md  extra.cmake  texture_3d.cpp
samples/tiny_shader_toy/: CMakeLists.txt  README.md  extra.cmake  tiny_shader_toy.cpp
(+369 files in other folders)
